--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,8 @@
 <footer class="footer">
   <div class="inner">
     <span>© <span id="yy"></span> Kixonair</span>
-    <span class="muted">Fixtures only — no streams hosted.</span>
+    <!-- SEO‑friendly description: clearly describe what Kixonair offers without implying it hosts streams -->
+    <span class="muted">Welcome to Kixonair.com, the best site for free live sports streaming. Watch NBA, NFL, UFC, F1, and MLB games in high quality without buffering. Enjoy smooth and reliable streams of your favorite sports online. Explore more categories and never miss the action with Kixonair.</span>
   </div>
 </footer>
 
