--- a/public/index.html
+++ b/public/index.html
@@ -67,8 +67,8 @@
 
 <main>
   <section class="hero">
-    <h1>Today’s Games, Zero Noise.</h1>
-    <p>Pick a game → quick access → match center.</p>
+    <!-- Simplified hero with a single SEO‑friendly heading -->
+    <h1>Live Sports Streaming 24/7</h1>
   </section>
 
   <div id="counts" class="counts">Loading…</div>
@@ -92,7 +92,7 @@
 <footer class="footer">
   <div class="inner">
     <span>© <span id="yy"></span> Kixonair</span>
-    <!-- SEO‑friendly description: clearly describe what Kixonair offers without implying it hosts streams -->
+    <!-- Promotional tagline for SEO -->
     <span class="muted">Welcome to Kixonair.com, the best site for free live sports streaming. Watch NBA, NFL, UFC, F1, and MLB games in high quality without buffering. Enjoy smooth and reliable streams of your favorite sports online. Explore more categories and never miss the action with Kixonair.</span>
   </div>
 </footer>
