--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
 <body>
 <header class="header">
   <div class="bar">
-    <a class="brand" href="/"><img src="/logo.svg" alt="Kixonair" height="28"/></a>
+    <!-- Updated logo: use new PNG file and allow CSS to control sizing -->
+    <a class="brand" href="/"><img src="/logo.png" alt="Kixonair"/></a>
     <!-- Search bar sits outside the collapsible controls so it remains accessible on mobile -->
     <input id="q" type="text" placeholder="Search team…" aria-label="Search team"/>
     <!-- Mobile menu toggle button. Hidden on larger screens via CSS. -->
