--- a/public/kixonair-index-v14-no-templates.html
+++ b/public/kixonair-index-v14-no-templates.html
@@ -14,7 +14,8 @@
 <body>
 <header class="header">
   <div class="bar">
-    <a class="brand" href="/"><img src="/logo.svg" alt="Kixonair" height="28"/></a>
+    <!-- Use the new PNG logo. Remove fixed height so CSS controls size -->
+    <a class="brand" href="/"><img src="/logo.png" alt="Kixonair"/></a>
 
     <div class="controls">
       <input id="q" type="text" placeholder="Search team…" aria-label="Search team"/>
