--- a/public/watch.html
+++ b/public/watch.html
@@ -14,7 +14,8 @@
 <body>
 <header class="header">
   <div class="bar">
-    <a class="brand" href="/"><img src="/logo.svg" alt="Kixonair" height="28"/></a>
+    <!-- Use the new PNG logo. Remove fixed height so CSS controls size -->
+    <a class="brand" href="/"><img src="/logo.png" alt="Kixonair"/></a>
   </div>
 </header>
 <main class="mc">
