--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
     <h1>Live Sports Streaming 24/7</h1>
   </section>
 
-  <div id="counts" class="counts">Loading…</div>
+  <div id="counts" class="counts" style="display:none">Loading…</div>
 
   <section class="section" data-sport="Football">
     <h2>⚽ Football</h2>
